fix(admin): Dark mode color for separators

--- a/app/Themes/Admin/assets/css/index.css
+++ b/app/Themes/Admin/assets/css/index.css
@@ -2213,6 +2213,9 @@ table tbody td {
   background-color: var(--ui-widget-bg);
   color: var(--body-text);
 }
+.dropdown-divider {
+  border-color: var(--ui-widget-br);
+}
 .dropdown-item {
   color: var(--link);
 }
